applications/openlookeng-website-bugs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openlookeng-bugs-ingress
  namespace: openlookeng-bugs
spec:
  tls:
    - hosts:
        - docs-bug.openlookeng.io
      secretName: openlookeng-bugs-tls
  rules:
    - host: docs-bug.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: openlookeng-bugs-service
              servicePort: 80
            path: /
